Split dnsPolicy into master.dnsPolicy and worker.dnsPolicy
Signed-off-by: Yi Chen <github@chenyicn.net>

--- a/charts/celeborn/templates/worker/statefulset.yaml
+++ b/charts/celeborn/templates/worker/statefulset.yaml
@@ -144,7 +144,7 @@ spec:
       {{- if or .Values.worker.priorityClass.name .Values.worker.priorityClass.create }}
       priorityClassName: {{ include "celeborn.worker.priorityClass.name" . }}
       {{- end }}
-      {{- with .Values.dnsPolicy }}
+      {{- with .Values.worker.dnsPolicy }}
       dnsPolicy: {{ . }}
       {{- end }}
       {{- with .Values.hostNetwork }}
