--- a/charts/celeborn/tests/worker/statefulset_test.yaml
+++ b/charts/celeborn/tests/worker/statefulset_test.yaml
@@ -274,9 +274,10 @@ tests:
           path: spec.template.spec.dnsPolicy
           value: ClusterFirstWithHostNet
 
-  - it: Should enable host network if `hostNetwork` is set to true
+  - it: Should enable host network if `worker.hostNetwork` is set to true
     set:
-      hostNetwork: true
+      worker:
+        hostNetwork: true
     asserts:
       - equal:
           path: spec.template.spec.hostNetwork
