--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -259,6 +259,14 @@ worker:
     #   cpu: 100m
     #   memory: 128Mi
 
+  # -- Security configurations for Celeborn worker containers.
+  securityContext:
+    # privileged: false
+    # allowPrivilegeEscalation: false
+    # runAsUser: 10006
+    # runAsGroup: 10006
+    # fsGroup: 10006
+
   # -- Node selector for Celeborn worker pods.
   nodeSelector:
     # key1: value1
