--- a/.github/workflows/cpp_integration.yml
+++ b/.github/workflows/cpp_integration.yml
@@ -30,19 +30,20 @@ on:
 jobs:
   celeborn_cpp_check_lint:
     runs-on: ubuntu-22.04
+    container: holylow/celeborn-cpp-dev:0.3
     steps:
       - uses: actions/checkout@v4
         with:
           persist-credentials: 'false'
           fetch-depth: 0
-      - uses: DoozyX/clang-format-lint-action@v0.20
-        with:
-          source: './cpp'
-          extensions: 'h,cpp,c'
-          clangFormatVersion: 19
+      - name: Check Cpp Code Lint
+        working-directory: ./cpp
+        run: |
+          find ./ -iname '*.h' -o -iname '*.cpp' | \
+            xargs clang-format-15 -style=file:./.clang-format -n --Werror
   celeborn_cpp_unit_test:
     runs-on: ubuntu-22.04
-    container: holylow/celeborn-cpp-dev:0.2
+    container: holylow/celeborn-cpp-dev:0.3
     steps:
       - uses: actions/checkout@v4
         with:
@@ -58,7 +59,7 @@ jobs:
         run: ctest
   celeborn_cpp_integration_test:
     runs-on: ubuntu-22.04
-    container: holylow/celeborn-cpp-dev:0.2
+    container: holylow/celeborn-cpp-dev:0.3
     steps:
       - uses: actions/checkout@v4
         with:
